메인 페이지 이름 변경

--- a/roulette.html
+++ b/roulette.html
@@ -20,7 +20,7 @@
         </form>
       </div>
       <div id="button2">
-        <button type="button" onclick="location.href='htmlTest..html'">
+        <button type="button" onclick="location.href='index.html'">
           <img src="img/gong.png" id="buttonImg">
         </button>
         <p class="forButton">button2</p>
