추가기능 더미파일

--- a/roulette.html
+++ b/roulette.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roulette Page</title>
+  <!-- css 연결 링크 -->
   <link rel="stylesheet" href="roulette.css">
 </head>
 <body>
   <div class="background">
-    <!-- css 연결 링크 -->
     <img src="img/background.png" alt="" id="aa">
     <div id="inContent">
       <h1 id="title">Title</h1>
