--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Main Page</title>
+  <title>오늘의 밥이 고민되는 당신을 위한 웹!</title>
   <!-- css 연결 링크 -->
   <link rel="stylesheet" href="cssTest.css">
 </head>
@@ -11,24 +11,24 @@
   <div class="background">
     <img src="img/background.png" alt="" id="aa">
     <div id="inContent">
-      <h1 id="title">Title</h1>
+      <h1 id="title">오늘의 밥이 고민되는 당신을 위한 웹!</h1>
       <div id="button1">
         <button type="button" onclick="location.href='roulette.html'">
           <img src="img/gong.png" id="buttonImg">
         </button>
-        <p class="forButton">button1</p>
+        <p class="forButton">시작</p>
         </form>
       </div>
       <div id="button2">
         <button type="button" onclick=makeAlert()>
           <img src="img/gong.png" id="buttonImg">
         </button>
-        <p class="forButton">button2</p>
+        <p class="forButton">메뉴 추가</p>
         </form>
       </div>
     </div>
   </div>
 <!-- 스크립트 -->
-  <script src="jsTest.js"></script>
+  <script src="01.js"></script>
 </body>
 </html>
